# process

./: .gitignore  Cargo.toml  committed.toml  proc.pest  stat.pest
.cargo/: config.toml
.github/workflows/: ci.yml
demo/: Cargo.toml
demo/src/: main.rs
mock/: cpuinfo  meminfo  uptime
mock/sysclassnet/wlan0/statistics/: rx_bytes  tx_bytes
src/: cpu.rs  data.rs  deserialize.rs  helper.rs  lib.rs  memory.rs  parser.rs  process.rs
src/modules/: cpu.rs  memory.rs  misc.rs  mod.rs  network.rs  process.rs
tests/: integration_memory_parsing.rs  integration_parsing.rs
