[package]
name = "process"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary*

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = { version = "2.7.5" }
pest_derive = { version = "2.7.5" }
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.*"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false  # Disable features which are enabled by default
features = ["user-hooks"]
